style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* END OF RESET */

#page{
  position: relative;
  height:100%;
  width:100%;
	margin:0 auto;
	font-family:'Helvetica','Tahoma',sans-serif;
}

#header{
  background: url(./pattern-dark.png)top left #141414;
  min-height:250px;
  /*height of whole page in %?*/
  padding: 50px 0 80px 0;
	margin:0 auto;

}

#instructors{
	font-size: 15px;
	line-height: 21px;
	margin:77px auto 0 auto;
}

#instructors h3{
	text-align: left;
	text-indent: 20%;
	display: block;
	margin: 0 auto 33px auto;
}

#instructors ul{
	overflow: auto;
	display: block;
	margin: 0 auto;
	position: relative;
	width: 640px;
	/*width 640px or 50%?*/
}

#instructors ul li{
	float: left;
	width: 190px;
	margin-right: 20px;
	color: #9c9c9c;
}
#instructors img{
	height:130px;
}

#instructors em{
	display: block;
	margin: 11px 0 4px 0;
	font-size: 19px;
	font-weight: lighter;
}

#marketing{
	clear: both;
	padding-top: 89px;
	width: 640px;
	margin: 0 auto;
}

#marketing h3{
	text-align: center;
	font-size:22px;
}
#marketing p {
  margin: 28px 0;
  font-size: 19px;
  line-height: 28px;
}

#marketing a {
  color: #999;
  text-decoration: none;
}

#logos{

}
#footer{

}

.title{
  text-align: left;
  color:white;
  margin:0 auto;
	max-width:620px;
	line-height: 1.25;
}
.title h3{
	color:plum;
}

.title h2{
	font-family: ‘Palatino Linotype’,'Book Antiqua', monospace;
}

.promo{
	padding:2.5em 0 0 0;
	line-height: normal;
}

.promo .example{
	color:plum;
	border-bottom: 3px dashed plum;
}

.join-us{
	margin:65px 0 0 0;
	font-size:1.25em;
}
/*find out why field and button wont stay at same height/vertical align*/
form{
	text-align: center;
	margin: 0 auto;
	padding:32px 0 0 0;
	clear:both;
	overflow: auto;
	width:100%;
}
form input{
	float:left;
	border-radius: 3px;
	margin:auto 1%;
	vertical-align: middle;
	font-size: 20px;
	height:65px;
}
input[type="email"]{
	width: 55%;
  color: #b2b2b2;
}
input[type="submit"]{
	width:28%;
	background: #ae5cc8;
	color:white;
}

strong,em{
	font-weight: bolder;
	color:black;
}


h1{
  font-size: 3em;
	font-weight: 700;
}
h2{
  font-size: 2.5em;
}
h3{
	font-size:2em;
}

